--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "^7.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
-    "nanoid": "^5.1.5"
+    "nanoid": "^5.1.5",
+    "resend": "^6.9.1"
   }
 }
